Fixed alignment of 'more' btn dropdown on mobiles

--- a/home.css
+++ b/home.css
@@ -804,3 +804,11 @@ html {
 .show {
     display: block;
 }
+
+@media (max-width: 768px) {
+    .dropdown-content{
+        margin-left: -2.3rem;
+        padding: 1px 1px; 
+        min-width: 80px;
+    }
+}
